# CodeForHHTechShare

./: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-and-test.py  conanfile.py  run-clang-format.py
src/: CMakeLists.txt
src/common/: config.h  filesystem.h  log.cpp  log.h
tests/: CMakeLists.txt  test_main.cpp
tests/basic/: test_unique_ptr.cpp
